--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@
 </head>
 <body>
 
+    <div class="w-full max-w-4xl mb-6 text-center">
+        <a href="demo.html" 
+           class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-lg shadow-lg transition duration-150 ease-in-out transform hover:scale-105">
+            Go to Demo Page
+        </a>
+    </div>
     <div id="detailModal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
