--- a/demo.html
+++ b/demo.html
@@ -28,7 +28,7 @@
         </div>
 
         <header class="text-center mb-8">
-            <h1 class="text-3xl font-bold text-indigo-700">VQ, RVQ & QINCO2 Visualization (Improved)</h1>
+            <h1 class="text-3xl font-bold text-indigo-700">VQ, RVQ & QINCO2 Visualization</h1>
             <p class="text-gray-600">Explore how vector quantization algorithms work, with an improved QINCO2 based on the "implicit neural codebooks" idea.</p>
         </header>
 
